--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!doctype HTML>
 <html>
 	<head>
-		<title></title>
-		<meta http-equiv="content-Type" content="text/html; charset=UTF-8"/>
+		<title>Träna tabeller</title>
+		<meta http-equiv="content-Type" content="text/html" charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
+	
 <body>
 
+<table>
+	<thead>
+		<tr>
+			<th>Mjölkprodukter</th>
+			<th>Kcal</th>
+			<th>Pris (Kr)</th>
+		</tr>
+	</thead>
+	<tbody class="products">
+		<tr>
+			<td>Yoghurt</td>
+			<td>2000</td>
+			<td>10</td>
+		</tr>
+		<tr>
+			<td rowspan="2">Hushållsost</td>
+			<td>1200</td>
+			<td>50</td>
+		</tr>
+		<tr>
+			<td>600</td>
+			<td>85</td>
+		</tr>
+	</tbody>
+	<tbody class="sum">
+		<tr>
+			<td colspan="2">Summa</td>
+			<td>60</td>
+		</tr>
+	</tbody>
+</table>
 
 </body>
 </html>
